# repro-unfitted-div-free-stokes

./: README.md  condition.py  convergence.py  estcond.py  example0_data.py  example1_data.py  example2_data.py  run_examples.bash  stokes.py
module/: CMakeLists.txt
module/demo/: test_spaces_stokes.py
module/src/: LICENSE-NGS-myfe  __init__.py  piolaP2diffop.hpp  piolaP2element.cpp  piolaP2element.hpp  piolaP2fespace.cpp  piolaP2fespace.hpp  piola_lagrange_space.cpp
results/: UnfittedStokesPiolaMappedSV_Example0.1_h0.1hogeo1gp0.1nitsche40lagr0.1theshold1scale_patch0.25lm1condest.txt  UnfittedStokesPiolaMappedSV_Example1_h0.3hogeo0globalgp0.1nitsche40lagr0.1threshold1scalepatch0.25lm1.data  UnfittedStokesPiolaMappedSV_Example1_h0.3hogeo1globalgp0.1nitsche40lagr0.1threshold1scalepatch0.25lm1.data  UnfittedStokesPiolaMappedSV_Example1_h0.3hogeo1globalgp0.1nitsche40lagr0.1threshold1scalepatch0.25lm2.data  UnfittedStokesPiolaMappedSV_Example2_h0.3hogeo0globalgp0.1nitsche40lagr0.1threshold1scalepatch0.25lm1.data  UnfittedStokesPiolaMappedSV_Example2_h0.3hogeo1globalgp0.1nitsche40lagr0.1threshold0.1scalepatch0.25lm1.data  UnfittedStokesPiolaMappedSV_Example2_h0.3hogeo1globalgp0.1nitsche40lagr0.1threshold0.1scalepatch0.25lm2.data
